# xournal

./: .gitignore  Makefile.am  README.org  autogen.sh  configure.ac  xournal.glade
debian/: changelog  control  rules
src/: Makefile.am  main.c  tags  xo-callbacks.c  xo-callbacks.h  xo-clipboard.c  xo-file.c  xo-image.c  xo-interface.c  xo-misc.c  xo-paint.c  xo-paint.h  xo-print.c  xo-print.h  xo-selection.c  xo-selection.h  xournal.h
